Fixed up Registration CSS to work on mobile screens

--- a/src/components/Stylesheets/SignUp.css
+++ b/src/components/Stylesheets/SignUp.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(80vh - 200px);    width: 30%;
+    height: calc(80vh - 200px);
+    width: 100%;
     margin: auto;
     flex-direction: column;
 }
@@ -59,9 +60,8 @@ h1 {
     margin-top: 15px;
 }
 
-.signup-container p {
-    text-align: center;
-    margin-top: 10px;
+.signup-container {
+    padding-bottom: 100vh;
 }
 
 .signin-container p {
@@ -69,5 +69,10 @@ h1 {
     margin-top: 10px;
 }
 
-
-
+/* MOBILE VIEW */
+@media (max-width: 768px) {
+    .form-container {
+        width: 380px;
+        max-width: 95%;
+    }
+}
